css : fixed positioning bug on smaller screens for footer container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1313,4 +1313,9 @@ nav {
   background-color: var(--WHITE);
   opacity: 0.5;
 }
+@media (max-width:768px){
+  .footer .container{
+    justify-content: start;
+  }
+}
 /* footer styles end */
